[package]
name = "webgpu-worker"
version = "0.0.1"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true
codegen-units = 1

[dependencies]
worker = { version = "0.0.18" }
serde_json = "1.0.67"
console_error_panic_hook = { version = "0.1.7" }
async-trait = "0.1.71"
serde = { version = "1.0.171", features = ["derive"] }
wonnx = "0.5.0"
ndarray = { version = "0.15.6", features = ["serde"] }
image = { version = "0.24.7", default-features = false, features = ["jpeg"] }
wasm-bindgen = "0.2.86"
